// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VocabLevel /> should adopt props 1`] = `
<styled.li
  isActionable={true}
>
  <Styled(Component)
    title="View level 12 vocabulary"
    to="/vocabulary/level/12"
  >
    <styled.h2>
      <styled.span
        isActionable={true}
      >
        Level 
        12
      </styled.span>
      <styled.span>
         
        126
         entries
      </styled.span>
    </styled.h2>
  </Styled(Component)>
  <Styled(LockButton)
    handleClick={[Function]}
    isActionable={true}
    isLocked={false}
    title="Lock level 12"
  />
</styled.li>
`;

exports[`<VocabLevel /> should match baseline snapshot 1`] = `
<styled.li
  isActionable={false}
>
  <Styled(Component)
    title="View level 12 vocabulary"
    to="/vocabulary/level/12"
  >
    <styled.h2>
      <styled.span
        isActionable={false}
      >
        Level 
        12
      </styled.span>
    </styled.h2>
  </Styled(Component)>
  <Styled(LockButton)
    handleClick={[Function]}
    isActionable={false}
    isLocked={true}
    title="Unlock level 12"
  />
</styled.li>
`;
